// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render expenses summary with multiple expense 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expenses
     totalling 
    $235,231,241.24
  </h1>
</div>
`;
